--- a/www/css/parking.css
+++ b/www/css/parking.css
@@ -5,11 +5,6 @@
 	margin:30px;
 	border: solid 2px red; 	
 	transition:2s;
-	position: relative;
-	z-index: 1;
-}
-main{
-	z-index: 1;
 }
 #spotInfo
 {
@@ -20,16 +15,13 @@ main{
 #circle
 {
 	padding-bottom:30px;
-	padding-top: 30px;
-}
-.button_wrap{
-	position: relative;
-	margin-top: 0px;
 }
 #bron 
 { 	height:50px;
 	background-color: #65bf1a;
 	width: 100%;	
+	position:relative;
+	top:-25px;
 	text-align: center;
 	padding-top: 10px;
 	z-index:0;
@@ -45,11 +37,8 @@ main{
 	top:0px;
 	text-align: center;
 	padding-top: 10px;
-	z-index:2;
+	z-index:10;
 	position: relative;
-	margin-bottom: -10%;
-
-
 	
 }
 #saleInfo
@@ -135,15 +124,11 @@ header
 	position: fixed;
 	top: 0;
 	width:100%;
-	z-index: 10;
-	padding: 0;
-
 }
 .menu
 {
 	background-color:#4bb320;
 	padding:10px;
-	z-index: 10;
 }
 .bmenu
 {
